acrescentado valor das vendas

--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>pagina de vendas</h1>
+    <P>vendas = R$5.000</P>
     <a href="index.html">voltar para a pagina oficial</a>
 </body>
 </html>
